eks-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-recipe-service
spec:
  type: ClusterIP
  selector:
    app: platform-recipe-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-recipe-deployment
  namespace: default
  labels:
    app: platform-recipe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: platform-recipe 
      
#  strategy:
#    rollingUpdate:
#      maxSurge: 1
#      maxUnavailable: 1
#    type: RollingUpdate
  template:
    metadata:
      labels:
        app: platform-recipe
    spec:
      containers:
        - name: platform-recipe
          image: 677284563273.dkr.ecr.ap-northeast-2.amazonaws.com/babyfood/recipe:latest
#          image: AWS_ECR_URI
          ports:
            - containerPort: 80
          imagePullPolicy: Always
#          command: ["/bin/sh", "-ec", "while :; do echo '.'; sleep 5 ; done"]
#          resources:
#            requests:
#              cpu: "256m"
#              memory: "512Mi"
#            limits:
#              cpu: "256m"
#              memory: "512Mi" 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-recipe-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: platform-recipe-service
              port:
                number: 80
